kubernetes/nginx/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: haproxy
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: diegomaciel.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: nginx
          servicePort: 80
